--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "php": "^8.0.2",
         "laravel/framework": "^9.0",
-        "portedcheese/base-settings": "^4.0"
+        "portedcheese/base-settings": "^4.0",
+        "portedcheese/site-reviews ": "^1.6"
     },
     "require-dev": {
         "orchestra/testbench": "^7.0"
